--- a/modbus_service/pyproject.toml
+++ b/modbus_service/pyproject.toml
@@ -1,16 +1,13 @@
 [tool.poetry]
-name = "ifes-web-service"
+name = "ifes-modbus-service"
 version = "0.1.0"
 description = ""
 authors = ["Matheus C. Delfino"]
+packages = [{ include = "modbus_service" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "0.115.6"
-uvicorn = "0.34.0"
-requests = "^2.32.3"
 pymodbustcp = "^0.3.0"
-ifes-modbus-service = {path = "E:/Projetos/IFES/ifes-integracao-industrial/modbus_service"}
 sqlalchemy = "^2.0.37"
 
 [build-system]
