--- a/ihm_streamlit/pyproject.toml
+++ b/ihm_streamlit/pyproject.toml
@@ -8,7 +8,10 @@ packages = [{ include = "ihm_streamlit" }]
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.32.3"
-streamlit = "^1.42.0"
+beautifulsoup4 = "^4.13.3"
+lxml = "^5.3.0"
+matplotlib = "^3.10.0"
+numpy = "^2.2.2"
 
 
 [build-system]
