--- a/web_service/.vscode/launch.json
+++ b/web_service/.vscode/launch.json
@@ -1,35 +1,37 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Main Web Service",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "web_service/__main__.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Modbus Client",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "web_service/modbus_client.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Web Service Uvicorn",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "uvicorn",
-            "args": [
-                "web_service.__main__:app",
-                "--reload",
-                "--factory"
-            ],
-            "console": "integratedTerminal",
-            "justMyCode": true
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Main Web Service",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "web_service/__main__.py",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Modbus Client",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "web_service/modbus_client.py",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Web Service Uvicorn",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "uvicorn",
+      "args": [
+        "web_service.__main__:app",
+        "--reload",
+        "--factory",
+        "--port",
+        "5000"
+      ],
+      "console": "integratedTerminal",
+      "justMyCode": true
+    }
+  ]
 }
