sem sucesso no ScadaBR

--- a/modbus_service/dockerfile
+++ b/modbus_service/dockerfile
@@ -1,7 +1,6 @@
-FROM python:3.11
-RUN pip install poetry
+FROM python:3.11-slim
 WORKDIR /app
-COPY pyproject.toml poetry.lock ./
-RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
-COPY . .
-CMD ["python", "modbus_server.py"]
+COPY dist/* /app/
+RUN pip install /app/*.whl
+EXPOSE 502
+CMD ["python", "-m", "modbus_service"]
