--- a/ihm_front/dockerfile
+++ b/ihm_front/dockerfile
@@ -1,7 +1,8 @@
-FROM nginx:latest
-
+FROM nginx:alpine
 WORKDIR /usr/share/nginx/html
-COPY ./resources /usr/share/nginx/html
-
+RUN rm -rf ./*
+COPY resources/ .
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN chmod -R 755 /usr/share/nginx/html && chown -R nginx:nginx /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
