--- a/web_service/pyproject.toml
+++ b/web_service/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
-name = "ifes-web-service"
+name = "web_service"
 version = "0.1.0"
 description = ""
 authors = ["Matheus C. Delfino"]
+packages = [{ include = "web_service" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -11,6 +12,7 @@ uvicorn = "0.34.0"
 requests = "^2.32.3"
 pymodbustcp = "^0.3.0"
 sqlalchemy = "^2.0.37"
+slowapi = "^0.1.9"
 
 [build-system]
 requires = ["poetry-core"]
